--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "UPverkefni"]
 	path = UPverkefni
-	url = git@github.com:Hvannberg/UPverkefni.git
+	url = https://github.com/Hvannberg/UPverkefni.git
