--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "UPverkefni"]
 	path = UPverkefni
 	url = https://github.com/Hvannberg/UPverkefni.git
+[submodule "up_utils"]
+	path = up_utils
+	url = https://github.com/kra33/up-utils
