--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-.ipynb_checkpoints
-__pycache__
-config.py
 .env
+*.binwordvectors.wv
+*.bin
 wordvectors.wv
 wordvectors.wv.vectors.npy
-*.bin
+__pycache__/
