--- a/Pipfile
+++ b/Pipfile
@@ -4,18 +4,18 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-aniso8601 = "*"
-bleach = "*"
-click = "*"
-colorama = "*"
-contextlib2 = "*"
-itsdangerous = "*"
-pyparsing = "*"
-pytz = "*"
-schema = "*"
-six = "*"
-webencodings = "*"
-"zope.interface" = "*"
+aniso8601 = "==9.0.1"
+bleach = "==3.3.0"
+click = "==8.0.1"
+colorama = "==0.4.4"
+contextlib2 = "==0.6.0.post1"
+itsdangerous = "==2.0.1"
+pyparsing = "==2.4.7"
+pytz = "==2021.1"
+schema = "==0.7.4"
+six = "==1.15.0"
+webencodings = "==0.5.1"
+"zope.interface" = "==5.4.0"
 gunicorn = "*"
 python-dotenv = "*"
 tensorflow-cpu = "==2.4.1"
@@ -27,13 +27,18 @@ gensim = "*"
 asyncio = "*"
 asyncpg = "*"
 gdown = "*"
-DateTime = "*"
-Flask = "*"
-Flask-HTTPAuth = "*"
-Flask-RESTful = "*"
-Jinja2 = "*"
+DateTime = "==4.3"
+Jinja2 = "==3.0.1"
 MarkupSafe = "==2.0.1"
-Werkzeug = "*"
+Werkzeug = "==2.0.1"
+pydantic = "*"
+fastapi = "*"
+lorem = "*"
+xlrd = "*"
+openpyxl = "*"
+typing = "*"
+uvicorn = {extras = ["standard"], version = "*"}
+pytest-asyncio = "*"
 
 [dev-packages]
 
